[gd_scene load_steps=32 format=2]

[ext_resource path="res://scripts/states/Enemy_state_machine.gd" type="Script" id=1]
[ext_resource path="res://scripts/states/EnemyIdle.gd" type="Script" id=2]
[ext_resource path="res://assets/spider/boss_spider/spider_boss_leg_5.png" type="Texture" id=3]
[ext_resource path="res://assets/spider/boss_spider/spider_boss_leg_3.png" type="Texture" id=4]
[ext_resource path="res://scripts/boss/Enemy_spider_boss.gd" type="Script" id=5]
[ext_resource path="res://nodes/HitBox.gd" type="Script" id=6]
[ext_resource path="res://nodes/HurtBox.gd" type="Script" id=7]
[ext_resource path="res://scripts/states/EnemyAttackingDistance.gd" type="Script" id=8]
[ext_resource path="res://scripts/states/EnemyDying.gd" type="Script" id=9]
[ext_resource path="res://shaders/RedAndGreenGlowShader.tres" type="Material" id=10]
[ext_resource path="res://assets/spider/boss_spider/spider_boss_leg_6.png" type="Texture" id=11]
[ext_resource path="res://assets/spider/boss_spider/spider_boss_leg_4.png" type="Texture" id=12]
[ext_resource path="res://assets/spider/boss_spider/spider_boss_leg_1.png" type="Texture" id=13]
[ext_resource path="res://assets/spider/boss_spider/spider_boss_leg_2.png" type="Texture" id=14]
[ext_resource path="res://assets/spider/boss_spider/spider_boss_body.png" type="Texture" id=15]
[ext_resource path="res://prefab/components/HealthComponent.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/boss/EnemySpiderStateBossSpawningCocoon.gd" type="Script" id=17]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;


void fragment() {
	COLOR.rgb = vec3(1.0);
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 9 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 123.0
height = 0.0

[sub_resource type="Shader" id=21]
code = "shader_type canvas_item;


void fragment() {
	COLOR.rgb = vec3(1.0);
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 21 )

[sub_resource type="Animation" id=12]
resource_name = "Die"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.243241, -108.242, 0.2, 57.4748, 90.5948, -0.9, 11.52, 0.6, 0.00573897, 79.0748, -0.025, 20, 0, -1.43999, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.5, 1.501 )
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.243241, -108.242, 0.1, 44.5, 54, -0.0251085, 2.16666, 0.112411, -9.70017, -2.16666, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=16]
resource_name = "walk"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Leg1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, -30.0, 0.0, -30.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Leg2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 0.0, 30.0, 0.0, 30.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Leg3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, -30.0, 0.0, -30.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Leg4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, -30.0, 0.0, -30.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Leg5:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 0.0, 30.0, 0.0, 30.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/Leg6:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 10.0, -30.0, 10.0, -30.0, 10.0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Die"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.243241, -108.242, 0.2, 57.4748, 90.5948, -0.9, 11.52, 0.6, 0.00573897, 79.0748, -0.025, 20, 0, -1.43999, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.5, 1.501 )
}

[sub_resource type="Animation" id=18]
length = 0.8
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.243241, -108.242, 0.1, 44.5, 54, -0.0251085, 2.16666, 0.112411, -9.70017, -2.16666, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=20]
resource_name = "walk"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Leg1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, -30.0, 0.0, -30.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Leg2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 0.0, 30.0, 0.0, 30.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Leg3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, -30.0, 0.0, -30.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Leg4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, -30.0, 0.0, -30.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Leg5:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, 0.0, 30.0, 0.0, 30.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/Leg6:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 10.0, -30.0, 10.0, -30.0, 10.0 ]
}

[sub_resource type="CircleShape2D" id=15]
radius = 465.242

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 5 )
MAX_DEFAULT_HEALTH = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
material = SubResource( 11 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 10 )

[node name="Body" type="Sprite" parent="Sprite"]
material = ExtResource( 10 )
use_parent_material = true
texture = ExtResource( 15 )

[node name="Leg1" type="Sprite" parent="Sprite"]
material = ExtResource( 10 )
use_parent_material = true
position = Vector2( -127, 39 )
texture = ExtResource( 13 )
offset = Vector2( -8.35703, 12.9476 )

[node name="Leg2" type="Sprite" parent="Sprite"]
material = ExtResource( 10 )
use_parent_material = true
position = Vector2( -105, 93 )
texture = ExtResource( 14 )
offset = Vector2( -9, 13 )

[node name="Leg3" type="Sprite" parent="Sprite"]
material = ExtResource( 10 )
use_parent_material = true
position = Vector2( -50, 105 )
texture = ExtResource( 4 )
offset = Vector2( -8, 17 )

[node name="Leg4" type="Sprite" parent="Sprite"]
material = ExtResource( 10 )
use_parent_material = true
position = Vector2( 47, 104 )
texture = ExtResource( 12 )
offset = Vector2( 7, 19 )

[node name="Leg5" type="Sprite" parent="Sprite"]
material = ExtResource( 10 )
use_parent_material = true
position = Vector2( 101, 91 )
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( 7, 17 )

[node name="Leg6" type="Sprite" parent="Sprite"]
material = ExtResource( 10 )
use_parent_material = true
position = Vector2( 125, 36 )
z_index = -2
texture = ExtResource( 11 )
offset = Vector2( 7, 16 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitoring = false
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
material = SubResource( 10 )
shape = SubResource( 8 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
material = SubResource( 10 )
shape = SubResource( 8 )

[node name="AnimationPlayerActionPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 12 )
anims/Hit = SubResource( 7 )
anims/RESET = SubResource( 3 )
anims/walk = SubResource( 16 )

[node name="AnimationPlayerActionEnemy" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 17 )
anims/Hit = SubResource( 18 )
anims/RESET = SubResource( 19 )
anims/walk = SubResource( 20 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="TimerSpawnCocoon" type="Timer" parent="."]
wait_time = 20.0

[node name="TimerAttack" type="Timer" parent="."]

[node name="TimerGlow" type="Timer" parent="."]
wait_time = 0.25

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 15 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="EnemyIdle" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="EnemyAttackingDistance" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="EnemySpiderStateBossSpawningCocoon" type="Node" parent="StateMachine"]
script = ExtResource( 17 )

[node name="EnemyDying" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="HealthComponent" parent="." instance=ExtResource( 16 )]
position = Vector2( 0, -124 )

[node name="SpawnCocoonPositions" type="Node2D" parent="."]

[node name="2" type="Node2D" parent="SpawnCocoonPositions"]
position = Vector2( -288, 206 )

[node name="3" type="Node2D" parent="SpawnCocoonPositions"]
position = Vector2( 290, 220 )

[connection signal="timeout" from="TimerSpawnCocoon" to="." method="_on_TimerCocoon_timeout"]
[connection signal="attack_send" from="StateMachine/EnemyAttackingDistance" to="." method="_on_EnemyAttackingDistance_attack_send"]
